# xai_audio_deepfake

./: .gitignore  README.md  deepfake.ipynb  deepfake.md  pyproject.toml  requirements.txt  setup.py  task.md
configs/: experiment.yaml
configs/degradation/: conditions.yaml
configs/models/: aasist.yaml  wavlm_ecapa.yaml
notebooks/: .gitkeep  kaggle_final.ipynb  kaggle_runner.ipynb
paper/: .gitkeep
results/: .gitkeep
scripts/: download_checkpoints.py  download_data.py  generate_mock_checkpoints.py  run_detection.py  run_faithfulness.py  run_full_pipeline.py  run_xai.py
src/: __init__.py
src/data/: dataset.py  degradation.py  utils.py
src/evaluation/: __init__.py  consistency_score.py  detection_metrics.py  faithfulness_metrics.py  statistical_tests.py
src/llm_explanation/: __init__.py  explanation_generator.py  prompt_templates.py  semantic_evaluator.py
src/models/: __init__.py  aasist.py  base_detector.py  wavlm_ecapa.py
src/visualization/: __init__.py  paper_figures.py
src/xai/: __init__.py  attribution_utils.py  base_explainer.py  integrated_gradients.py  kernel_shap.py
tests/: test_ecs.py  test_metrics.py  test_xai.py
